[package]
name = "rosalind_rust"
version = "0.1.0"
authors = ["vierbein"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }


[[bin]]
name = "ba1a"
path = "src/bin/ba1a.rs"

[[bin]]
name = "ba1b"
path = "src/bin/ba1b.rs"
